# NewsAggregator

./: README.md
backend/: docker-compose.yml  help.txt  info.txt
backend/api/: Dockerfile  docker-compose.yml  pyproject.toml
backend/api/api/: main.py
backend/mariadb/: docker-compose.yml
backend/news_curator/: Dockerfile  docker-compose.yml  pyproject.toml
backend/news_curator/news_curator/: app.py  main.py  news_model.py  structure.py
backend/news_curator/news_curator/scrapers/: cnn.py  phys.py  youtube.py
backend/news_curator/news_curator/scrapers/helpers/: files.py
backend/news_curator/news_curator/scrapers/sources/: cnn.json  youtube.json
frontend/: README.md  nuxt.config.js  package.json  test.sass
frontend/assets/css/: bulma.scss
frontend/components/: DropdownMenu.vue
frontend/components/article/: ArticleStepper.vue
frontend/components/research/: card.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/articles/: index.vue
frontend/pages/articles/machine-learning/: index.vue  test.json
frontend/pages/articles/machine-learning/boltzman-machine/: applications.vue  demonstrations.vue  index.vue  overview.vue  theory.vue
frontend/static/: articles.js
frontend/store/: index.js
http_benchmark/: server  server.go
