[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Mohand Goudjil <36730166+mgoudjil@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.38.1"
uvicorn = "^0.9.0"
email-validator = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
